# FTCHD

./: .envrc  .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
config/: base.yaml  binary.yaml  subtype.yaml
src/: eval.py  fit.py
src/common/: config.py  logging.py  pipeline.py  pl_helper.py
src/ftchd/: __init__.py  data.py  misc.py  model.py
src/ftchd/callbacks/: bootstrap.py  cal_metric.py  draw_heatmaps.py  warmup.py
src/ftchd/modules/: base_models.py  fp_layers.py  metrics.py
src/interoperability/: fhir_bundle.py  fhir_server.py
terminology/: README.md
