[project]
authors = [{name = "Sorades", email = "2019302080119@whu.edu.cn"}]
dependencies = [
    "rich>=13.9.4,<14",
    "matplotlib>=3.9.2,<4",
    "openpyxl>=3.1.5,<4",
]
name = "FTCHD"
description = "Codebase for `An interpretable deep learning model for first-trimester fetal cardiac screening`"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ftchd = { path = ".", editable = true }

[tool.pixi.activation.env]
NO_ALBUMENTATIONS_UPDATE = '1'

[tool.pixi.dependencies]
python = "3.12.4.*"
pytorch = { version = "2.4.0.*", channel = "pytorch" }
torchvision = { version = ">=0.19.0,<0.20", channel = "pytorch" }
lightning = ">=2.4.0,<3"
transformers = ">=4.45.2,<5"
opencv = ">=4.10.0,<5"
wandb = ">=0.19.1,<0.20"
albumentations = ">=1.4.15,<2"
omegaconf = ">=2.3.0,<3"
